--- a/src/main/webapp/resources/css/cart.css
+++ b/src/main/webapp/resources/css/cart.css
@@ -1,56 +1,154 @@
+
+* {
+    box-sizing: border-box;
+}
+
 body {
     height: 100vh;
 }
 
+table {
+    width: 85%;
+    margin: 0 auto;
+    text-align: left;
+    font-size: 12px;
+    line-height: 1.35;
+    color: #777;
+}
+
+th, td {
+    text-align: center;
+}
+
+td {
+    padding: 10px 0;
+}
+
 hr {
-    width: 95%;
+    width: 80%;
     height: 1px;
     border: 0;
     background-color: #cecece;
 }
 
-.first__under {
-    margin-top: 50px;
-    margin-bottom: 50px;
+.quantity_control input {
+    width: 23px;
+    height: 23px;
+    padding: 5px;
+    border: 1px solid #acacac;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+    text-align: center;
 }
 
-.second__under {
-    margin-top: 25px;
-    height: 2px;
-    background-color: #dddddd;
+.first__under {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+thead th {
+    padding: 7px 0 6px;
+    background-color: #fff;
+    border-top: 2px solid #ddd;
+    font-weight: normal;
+    color: #9b9a9a;
+    border-bottom: 1px solid #ddd;
 }
 
 .head_cart {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-weight: 600;
+    margin-top: 50px;
+    margin-bottom: 40px;
+    text-align: center;
+    color: rgb(51, 51, 51);
+    font-size: 13px;
+    font-weight: 800;
+    letter-spacing: 1.4px;
 }
 
 .title__cart {
-    margin-left: 50px;
-    font-size: 12px;
+    margin-left: 8%;
+    font-size: 15px;
     font-weight: 600;
+    margin-bottom: 10px;
 }
 
-.tb__cart {
-    display: grid;
-    /* grid-auto-flow: column; */
-    margin-left: 30px;
-    font-size: 12px;
-    text-align: center;
-    color: #a3a3a3;
+.tb__left {
+    text-align: left;
 }
 
 .tb__right {
-    text-align: end;
-}
-
-table {
-    width: 95%;
+    display: grid;
+    grid-template-columns: repeat(4, 33%);
+    place-items: center center;
+    font-weight: bold;
+    font-size: 14px;
 }
 
 tfoot td, tfoot tr{
     border-bottom: 1px solid #a3a3a3;
     padding: 10px;
+}
+
+.quantity_control button{
+    background-color: white;
+    border: 1px solid #b4b4b4;
+}
+
+.nonCart {
+    margin-left: 24%;
+    line-height: 1.35;
+    color: black;
+    padding: 20px;
+    font-weight: bold;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+.btnStyle > form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#orderForm button {
+    display: inline;
+    width: 190px;
+    height: 48px;
+    line-height: 48px;
+    background: none;
+    margin: 10px;
+}
+
+#orderForm button:first-child {
+    border: 1px solid #d8d8d8;
+    color: #343434;
+}
+
+#orderForm button:last-child {
+    border: 1px solid #333;
+    color: #fff;
+    background-color: #333;
+}
+
+#removeAllForm {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+.removeAllBtn,
+.deleteBtn {
+    width: 120px;
+    height: 30px;
+    font-weight: normal;
+    border: 1px solid #b4b4b4;
+    line-height: 25px;
+    text-align: center;
+    background-color: white;
+    color: #333;
 }
