--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -5,8 +5,8 @@
 }
 
 body{
-    height: 200vh;
-    margin-top: 20%;
+    height: 100vh;
+    padding-top: 50px;
 }
 
 a {
@@ -17,8 +17,11 @@ a {
 header {
     position: fixed;
     top: 0;
+    left: 0;
+    right: 0;
     width: 100%;
     z-index: 100;
+    background-color: white;
 }
 
 
@@ -72,4 +75,8 @@ ul {
 
 .bottom_header li {
     margin: 14px;
+}
+
+i {
+    color: #4d4d59;
 }
