--- a/src/main/webapp/resources/css/searchConditionForm.css
+++ b/src/main/webapp/resources/css/searchConditionForm.css
@@ -78,3 +78,11 @@
 .sendBtn:hover, .sendBtnSmall:hover {
     background: #0b7dda;
 }
+
+.buttons {
+    text-align: center;
+}
+
+.clickButton {
+    display: inline-block;
+}
