--- a/src/main/webapp/resources/css/cart.css
+++ b/src/main/webapp/resources/css/cart.css
@@ -1,17 +1,16 @@
-
 * {
-    box-sizing: border-box;
+    font-family: "IBM Plex Sans KR", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
-body {
-    height: 100vh;
-}
+
 
 table {
     width: 85%;
     margin: 0 auto;
     text-align: left;
-    font-size: 12px;
+    font-size: 13px;
     line-height: 1.35;
     color: #777;
 }
@@ -56,7 +55,7 @@ thead th {
     background-color: #fff;
     border-top: 2px solid #ddd;
     font-weight: normal;
-    color: #9b9a9a;
+    color: #4d4d59;
     border-bottom: 1px solid #ddd;
 }
 
@@ -64,8 +63,7 @@ thead th {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
-    margin-bottom: 40px;
+    margin-top: 130px;
     text-align: center;
     color: rgb(51, 51, 51);
     font-size: 13px;
