--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -1,9 +1,3 @@
-* {
-    font-family: "IBM Plex Sans KR", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-
 body{
     height: 100vh;
     padding-top: 50px;
@@ -43,7 +37,7 @@ ul {
 .top_header li {
     margin: 10px;
     font-size: 12px;
-    color: #a6a6a6;
+    color: #4d4d59;
 }
 
 .main_header {
@@ -73,9 +67,6 @@ ul {
     margin-left: 7%;
 }
 
-.bottom_header li {
-    margin: 14px;
-}
 
 i {
     color: #4d4d59;
