--- a/src/main/webapp/resources/css/order.css
+++ b/src/main/webapp/resources/css/order.css
@@ -4,16 +4,12 @@
     font-style: normal;
 }
 
-body {
-    height: 100vh;
-    margin-top: 10%;
-}
 
 table {
-    width: 90%;
+    width: 85%;
     margin: 0 auto;
     text-align: left;
-    font-size: 12px;
+    font-size: 13px;
     line-height: 1.35;
     color: #777;
 }
@@ -29,18 +25,19 @@ th, td {
 
 td {
     padding: 15px 0;
+    vertical-align: middle;
 }
 
 hr {
-    width: 90%;
+    width: 85%;
     height: 1px;
     border: 0;
     background-color: #cecece;
 }
 
 .first__under {
-    margin-top: 10px;
-    margin-bottom: 20px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 thead th {
@@ -48,7 +45,7 @@ thead th {
     background-color: #fff;
     border-top: 2px solid #ddd;
     font-weight: normal;
-    color: #9b9a9a;
+    color: #4d4d59;
     border-bottom: 1px solid #ddd;
 }
 
@@ -63,19 +60,29 @@ thead th {
 }
 
 .head_order {
-    padding-bottom: 10px;
-    text-align: center;
-    color: #333;
     font-size: 15px;
     font-weight: 600;
-    letter-spacing: 1.4px;
+    margin-bottom: 10px;
 }
 
 .order__title {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
     align-items: center;
-    margin: 15px 100px;
+    margin: 0 130px;
+    margin-top: 130px;
+    color: rgb(51, 51, 51);
+    font-size: 13px;
+    font-weight: 800;
+    letter-spacing: 1.4px;
+    justify-content: space-between;
+    text-align: center;
+    white-space: nowrap;
+}
+
+img {
+    height: 80px;
+    width: 80px;
 }
 
 
@@ -91,16 +98,13 @@ thead th {
     color: #8d8d8d;
 }
 
-.order__delivery{
-
-}
 
 
 .title__order {
-    margin-left: 100px;
-    margin-bottom: 10px;
-    font-size: 12px;
+    margin-left: 8%;
+    font-size: 15px;
     font-weight: 600;
+    margin-bottom: 10px;
 }
 
 
