--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -27,11 +27,12 @@ header {
 
 ul {
     list-style: none;
-    display: flex;
+    /*display: flex;*/
 }
 
 .top_header ul {
     margin-right: 60px;
+    display: flex;
 }
 
 .top_header li {
@@ -61,6 +62,10 @@ ul {
 
 .main_header_ul a:first-child {
     font-weight: bold;
+}
+
+.main_header_ul {
+    display: flex;
 }
 
 .bottom_header{
