--- a/src/main/webapp/resources/css/index.css
+++ b/src/main/webapp/resources/css/index.css
@@ -8,9 +8,9 @@ li {
     list-style: none;
 }
 
-body {
-    font-family: "Open Sans", sans-serif;
-}
+/*body {*/
+/*    font-family: "Open Sans", sans-serif;*/
+/*}*/
 h2 {
     color: #000;
     font-size: 26px;
