--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -1,6 +1,6 @@
 body{
     height: 100vh;
-    padding-top: 50px;
+    padding-top: 200px;
 }
 
 a {
@@ -25,7 +25,8 @@ header {
     margin-right: 5%;
 }
 
-ul {
+.top_header_ul,
+.main_header_ul{
     list-style: none;
     /*display: flex;*/
 }
@@ -66,10 +67,6 @@ ul {
 
 .main_header_ul {
     display: flex;
-}
-
-.bottom_header{
-    margin-left: 7%;
 }
 
 
