--- a/src/main/webapp/resources/css/nav.css
+++ b/src/main/webapp/resources/css/nav.css
@@ -5,17 +5,17 @@ body {
 
 /*     flex-direction: column; */
 
-.navbar {
-    overflow: hidden;
+.navibar {
+    /*overflow: hidden;*/
     background-color: white;
+    padding-left: 7%;
 }
 
-/* 지울예정 */
-.navbar a {
+.navibar a {
     float: left;
     font-size: 16px;
     color: white;
-    padding: 8px 14px;
+    padding: 10px 14px;
     margin-right: 70px;
     text-decoration: none;
 }
@@ -51,9 +51,9 @@ body {
     z-index: 1;
     white-space: nowrap;
     background-color: white;
-    margin-left: 7%;
     padding-bottom: 55px;
     border-bottom: 2px solid rgba(223,4,29,0.5);
+
 }
 .sub__nav__content__group {
     display: flex;
@@ -61,6 +61,7 @@ body {
 .mid {
     display: flex;
     flex-direction: column;
+    margin-left: 7%;
 }
 
 .mid a:first-child {
