--- a/src/main/webapp/resources/css/mainVideo.css
+++ b/src/main/webapp/resources/css/mainVideo.css
@@ -4,8 +4,9 @@
 
 #content {
     display: flex;
-    justify-content: space-between;
-    text-align: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .interview {
