--- a/src/main/webapp/resources/css/footer.css
+++ b/src/main/webapp/resources/css/footer.css
@@ -3,10 +3,10 @@ body{
     margin-top: 10%;
 }
 
-a {
-    text-decoration: none;
-    color: black;
-}
+/*a {*/
+/*    text-decoration: none;*/
+/*    color: black;*/
+/*}*/
 
 ul {
     list-style: none;
@@ -35,6 +35,7 @@ hr {
 .top_footer,
 .main_footer {
     display: grid;
+    text-align: center;
 }
 
 .top_footer {
@@ -75,7 +76,7 @@ hr {
 }
 
 .main_footer {
-    grid-template-columns: repeat(4, 25%);
+    grid-template-columns: repeat(4, 24%);
 }
 
 .footer {
