css 변경 및 배송지 기능 추가

--- a/src/main/webapp/resources/css/order.css
+++ b/src/main/webapp/resources/css/order.css
@@ -6,7 +6,8 @@
 
 
 table {
-    width: 85%;
+    /* 2024.05.21 [혁락] 85% -> 55%*/
+    width: 55%;
     margin: 0 auto;
     text-align: left;
     font-size: 13px;
