--- a/src/main/webapp/resources/css/searchConditionForm.css
+++ b/src/main/webapp/resources/css/searchConditionForm.css
@@ -1,39 +1,47 @@
-.search-container, .product-container, .stock-container {
+.search-container {
     width: 100%;
     margin: 20px 0px;
     display: inline-block;
     text-align: center;
 }
 
+.search-container tbody tr:nth-of-type(3) select {
+    margin-right: 30px;
+}
+
+.search-container td {
+    text-align: left;
+    padding-left: 20px;
+}
+
+/* 검색에서 SELECT 옵션, input 설정 */
 .search-option {
     outline: none;
-    margin: 0 5px;
     border: 1px solid #ccc;
     padding: 5px;
+    font-size: 12px;
 }
 
 .search-option > option {
     text-align: center;
 }
 
-.search-input {
+.search-input, .search-inputDate{
     color: gray;
     background-color: white;
     border: 1px solid #ccc;
     height: 100%;
-    width: 300px;
-    font-size: 15px;
+    font-size: 12px;
     padding: 5px;
 }
 
+.search-input {
+    width: 300px;
+}
+
 .search-inputDate {
-    color: gray;
-    background-color: white;
-    border: 1px solid #ccc;
-    height: 100%;
     width: 100px;
-    font-size: 15px;
-    padding: 5px;
+    text-align: center;
 }
 
 .search-input::placeholder {
@@ -53,16 +61,17 @@
 }
 
 .sendBtn, .cancelBtn {
+    width: 90px;
     padding: 10px 20px;
-    font-size: 15px;
+    font-size: 13px;
 }
 
-.sendBtnSmall, .cancelBtnSmall {
+.sendBtnSmall {
     padding: 5px 10px;
-    font-size: 10px;
+    font-size: 12px;
 }
 
-.cancelBtn, .cancelBtnSmall {
+.cancelBtn {
     border-radius: 4px;
     border: 1px solid #000000;
     background-color: white;
@@ -70,19 +79,11 @@
     color: #000000;
 }
 
-.cancelBtn:hover, .cancelBtnSmall:hover {
+.cancelBtn:hover {
     background: #0b7dda;
     color: white;
 }
 
-.sendBtn:hover, .sendBtnSmall:hover {
+.sendBtn:hover {
     background: #0b7dda;
-}
-
-.buttons {
-    text-align: center;
-}
-
-.clickButton {
-    display: inline-block;
 }
