--- a/src/main/webapp/resources/css/cart.css
+++ b/src/main/webapp/resources/css/cart.css
@@ -4,8 +4,6 @@
     font-style: normal;
 }
 
-
-
 .cart_tale {
     width: 85%;
     margin: 0 auto;
@@ -13,6 +11,11 @@
     font-size: 13px;
     line-height: 1.35;
     color: #777;
+}
+
+.cart_tale a {
+    text-decoration: none;
+    color: black;
 }
 img {
     height: 80px;
