--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -1,14 +1,16 @@
-body{
-    height: 100vh;
+body {
     padding-top: 200px;
 }
 
-a {
+.cart_link {
     text-decoration: none;
     color: black;
 }
 
-header {
+.cart__header {
+    font-family: "IBM Plex Sans KR", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     position: fixed;
     top: 0;
     left: 0;
