--- a/src/main/webapp/resources/css/order.css
+++ b/src/main/webapp/resources/css/order.css
@@ -29,15 +29,15 @@ td {
 }
 
 hr {
-    width: 85%;
+    width: 100%;
     height: 1px;
     border: 0;
     background-color: #cecece;
 }
 
 .first__under {
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-top: 5px;
+    margin-bottom: 15px
 }
 
 thead th {
@@ -53,10 +53,11 @@ thead th {
     display: flex;
     justify-content: left;
     align-items: center;
-    font-size: 12px;
-    line-height: 1.35;
-    color: #777;
-    margin-left: 100px;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 2;
+    color: rgb(51, 51, 51);
+    margin-left: 8%;
 }
 
 .head_order {
@@ -69,8 +70,7 @@ thead th {
     display: grid;
     grid-template-columns: repeat(2, auto);
     align-items: center;
-    margin: 0 130px;
-    margin-top: 130px;
+    margin: 1% 8%;
     color: rgb(51, 51, 51);
     font-size: 13px;
     font-weight: 800;
@@ -79,6 +79,12 @@ thead th {
     text-align: center;
     white-space: nowrap;
 }
+
+.label {
+    margin-left: 10px;
+    font-size: 14px;
+}
+
 
 img {
     height: 80px;
