--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -1,17 +1,17 @@
 body {
-    padding-top: 200px;
+    padding-top: 200px !important;
 }
 
 .cart_link {
-    text-decoration: none;
-    color: black;
+    text-decoration: none !important;
+    color: black !important;
 }
 
 .cart__header {
-    font-family: "IBM Plex Sans KR", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    position: fixed;
+    font-family: "IBM Plex Sans KR", sans-serif !important;
+    font-weight: 400 !important;
+    font-style: normal !important;
+    position: fixed !important;
     top: 0;
     left: 0;
     right: 0;
@@ -48,7 +48,7 @@ body {
     display: grid;
     grid-template-columns: repeat(2, auto);
     justify-content: space-between;
-    margin: 0px 8%;
+    margin: 0 8%;
 }
 
 .main_header h1 {
@@ -63,15 +63,11 @@ body {
     font-size: 19px;
 }
 
-.main_header_ul a:first-child {
-    font-weight: bold;
-}
 
 .main_header_ul {
     display: flex;
 }
 
-
-i {
+.cart_link i {
     color: #4d4d59;
 }
