--- a/src/main/webapp/resources/css/order.css
+++ b/src/main/webapp/resources/css/order.css
@@ -1,13 +1,14 @@
-* {
+.order__items * {
     font-family: "IBM Plex Sans KR", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
 
 
-table {
+.tb__order table {
     /* 2024.05.21 [혁락] 85% -> 55%*/
-    width: 55%;
+    /* 2024.05.22 [다니] 55% -> 85%*/
+    width: 85%;
     margin: 0 auto;
     text-align: left;
     font-size: 13px;
@@ -15,33 +16,33 @@ table {
     color: #777;
 }
 
-a {
+.tb__order a {
     text-decoration: none;
     color: black;
 }
 
-th, td {
+.tb__order th,
+.tb__order td {
     text-align: center;
 }
 
-td {
+.tb__order td {
     padding: 15px 0;
     vertical-align: middle;
 }
 
-hr {
-    width: 100%;
+.tb__order hr {
+    width: 85%;
     height: 1px;
     border: 0;
     background-color: #cecece;
 }
 
 .first__under {
-    margin-top: 5px;
-    margin-bottom: 15px
+    margin-top: 40px;
 }
 
-thead th {
+.tb__order thead th {
     padding: 7px 0 6px;
     background-color: #fff;
     border-top: 2px solid #ddd;
@@ -52,13 +53,13 @@ thead th {
 
 .head_main {
     display: flex;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
-    font-size: 16px;
-    font-weight: bold;
-    line-height: 2;
+    text-align: center;
     color: rgb(51, 51, 51);
-    margin-left: 8%;
+    font-size: 20px;
+    font-weight: 800;
+    letter-spacing: 1.4px;
 }
 
 .head_order {
@@ -87,7 +88,7 @@ thead th {
 }
 
 
-img {
+.tb__order img {
     height: 80px;
     width: 80px;
 }
@@ -112,6 +113,7 @@ img {
     font-size: 15px;
     font-weight: 600;
     margin-bottom: 10px;
+    margin-top: 5%;
 }
 
 
@@ -123,7 +125,8 @@ img {
     font-size: 14px;
 }
 
-tfoot td, tfoot tr{
+.tb__order tfoot td,
+.tb__order tfoot tr{
     border-bottom: 1px solid #a3a3a3;
     padding: 10px;
 }
