fix::[다니] order, dlv CSS 수정
* cart & order & delivery & pay css
* cart & order & pay & delivery CSS update
* cart & order & pay & delivery CSS update

--- a/src/main/webapp/resources/css/cart.css
+++ b/src/main/webapp/resources/css/cart.css
@@ -1,10 +1,8 @@
-* {
+.cart * {
     font-family: "IBM Plex Sans KR", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
-
-
 
 .cart_tale {
     width: 85%;
@@ -14,21 +12,27 @@
     line-height: 1.35;
     color: #777;
 }
-img {
+
+.cart_tale a {
+    text-decoration: none;
+    color: black;
+}
+.cart_tale img {
     height: 80px;
     width: 80px;
 }
 
-th, td {
+.cart_tale th,
+.cart_tale td {
     text-align: center;
 }
 
-td {
+.cart_tale td {
     padding: 10px 0;
     vertical-align: middle;
 }
 
-hr {
+.cart_tale hr {
     width: 80%;
     height: 1px;
     border: 0;
@@ -50,7 +54,7 @@ hr {
     margin-bottom: 40px;
 }
 
-thead th {
+.cart_tale thead th {
     padding: 7px 0 6px;
     background-color: #fff;
     border-top: 2px solid #ddd;
@@ -65,7 +69,7 @@ thead th {
     align-items: center;
     text-align: center;
     color: rgb(51, 51, 51);
-    font-size: 13px;
+    font-size: 20px;
     font-weight: 800;
     letter-spacing: 1.4px;
 }
