--- a/src/main/webapp/resources/css/order.css
+++ b/src/main/webapp/resources/css/order.css
@@ -1,13 +1,14 @@
-* {
+.order__items * {
     font-family: "IBM Plex Sans KR", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
 
 
-table {
+.tb__order table {
     /* 2024.05.21 [혁락] 85% -> 55%*/
-    width: 55%;
+    /* 2024.05.22 [다니] 55% -> 85%*/
+    width: 85%;
     margin: 0 auto;
     text-align: left;
     font-size: 13px;
@@ -15,21 +16,22 @@ table {
     color: #777;
 }
 
-a {
+.order__header a{
     text-decoration: none;
     color: black;
 }
 
-th, td {
+.tb__order th,
+.tb__order td {
     text-align: center;
 }
 
-td {
+.tb__order td {
     padding: 15px 0;
     vertical-align: middle;
 }
 
-hr {
+.tb__order hr {
     width: 85%;
     height: 1px;
     border: 0;
@@ -38,10 +40,9 @@ hr {
 
 .first__under {
     margin-top: 40px;
-    margin-bottom: 40px;
 }
 
-thead th {
+.tb__order thead th {
     padding: 7px 0 6px;
     background-color: #fff;
     border-top: 2px solid #ddd;
@@ -52,12 +53,13 @@ thead th {
 
 .head_main {
     display: flex;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
-    font-size: 12px;
-    line-height: 1.35;
-    color: #777;
-    margin-left: 100px;
+    text-align: center;
+    color: rgb(51, 51, 51);
+    font-size: 20px;
+    font-weight: 800;
+    letter-spacing: 1.4px;
 }
 
 .head_order {
@@ -70,8 +72,7 @@ thead th {
     display: grid;
     grid-template-columns: repeat(2, auto);
     align-items: center;
-    margin: 0 130px;
-    margin-top: 130px;
+    margin: 1% 8%;
     color: rgb(51, 51, 51);
     font-size: 13px;
     font-weight: 800;
@@ -81,7 +82,13 @@ thead th {
     white-space: nowrap;
 }
 
-img {
+.label {
+    margin-left: 10px;
+    font-size: 14px;
+}
+
+
+.tb__order img {
     height: 80px;
     width: 80px;
 }
@@ -106,6 +113,7 @@ img {
     font-size: 15px;
     font-weight: 600;
     margin-bottom: 10px;
+    margin-top: 5%;
 }
 
 
@@ -117,7 +125,8 @@ img {
     font-size: 14px;
 }
 
-tfoot td, tfoot tr{
+.tb__order tfoot td,
+.tb__order tfoot tr{
     border-bottom: 1px solid #a3a3a3;
     padding: 10px;
 }
