--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -1,15 +1,17 @@
-body{
-    height: 100vh;
-    padding-top: 200px;
+body {
+    padding-top: 200px !important;
 }
 
-a {
-    text-decoration: none;
-    color: black;
+.cart_link {
+    text-decoration: none !important;
+    color: black !important;
 }
 
-header {
-    position: fixed;
+.cart__header {
+    font-family: "IBM Plex Sans KR", sans-serif !important;
+    font-weight: 400 !important;
+    font-style: normal !important;
+    position: fixed !important;
     top: 0;
     left: 0;
     right: 0;
@@ -46,7 +48,7 @@ header {
     display: grid;
     grid-template-columns: repeat(2, auto);
     justify-content: space-between;
-    margin: 0px 8%;
+    margin: 0 8%;
 }
 
 .main_header h1 {
@@ -61,15 +63,11 @@ header {
     font-size: 19px;
 }
 
-.main_header_ul a:first-child {
-    font-weight: bold;
-}
 
 .main_header_ul {
     display: flex;
 }
 
-
-i {
+.cart_link i {
     color: #4d4d59;
 }
