--- a/src/main/webapp/resources/css/carousel.css
+++ b/src/main/webapp/resources/css/carousel.css
@@ -15,12 +15,12 @@ main {
 }
 
 #advertisement-carousel .carousel-inner .carousel-item .carousel-caption .btn-primary {
-    color: #7ac400;
+    color: #fff;
     font-size: 11px;
     text-transform: uppercase;
     font-weight: bold;
     background: none;
-    border: 1px solid #7ac400;
+    border: 1px solid #fff;
     padding: 12px 28px;
     margin-top: 5px;
     line-height: 16px;
@@ -28,8 +28,8 @@ main {
 }
 
 #advertisement-carousel .carousel-inner .carousel-item .carousel-caption .btn:hover, #advertisement-carousel .carousel-inner .carousel-item .carousel-caption .btn:focus {
-    color: #fff;
-    background: #7ac400;
+    color: #073713;
+    background: #fff;
     box-shadow: none;
 }
 
@@ -66,12 +66,6 @@ main {
     top:45%;
     padding: 0;
 }
-
-/*
-.main-banner-carousel {
-    z-index: 9999;
-}
-*/
 
 /*제품 캐러셀 css*/
 li {
@@ -114,7 +108,7 @@ h2 {
     border-radius: 6px;
     text-align: center;
     position: relative;
-    box-shadow: 2px 4px 6px #d7e9de;
+    box-shadow: 2px 4px 6px #073713;
     max-height: 322.57px;
 }
 .carousel .item .img-box {
@@ -140,12 +134,12 @@ h2 {
     margin-bottom: 5px;
 }
 .carousel .thumb-content .btn {
-    color: #7ac400;
+    color: #073713;
     font-size: 11px;
     text-transform: uppercase;
     font-weight: bold;
     background: none;
-    border: 1px solid #7ac400;
+    border: 1px solid #073713;
     padding: 6px 14px;
     margin-top: 5px;
     line-height: 16px;
@@ -153,7 +147,7 @@ h2 {
 }
 .carousel .thumb-content .btn:hover, .carousel .thumb-content .btn:focus {
     color: #fff;
-    background: #7ac400;
+    background: #073713;
     box-shadow: none;
 }
 .carousel .thumb-content .btn i {
@@ -164,13 +158,13 @@ h2 {
 .carousel .carousel-control {
     height: 44px;
     width: 40px;
-    background: #7ac400;
+    background: #073713;
     margin: auto 0;
     border-radius: 4px;
     opacity: 0.8;
 }
 .carousel .carousel-control:hover {
-    background: #78bf00;
+    background: #073713;
     opacity: 1;
 }
 .carousel .carousel-control i {
@@ -219,7 +213,7 @@ h2 {
     background: rgba(0, 0, 0, 0.2);
 }
 .carousel-indicators li.active {
-    background: rgba(0, 0, 0, 0.6);
+    background: #073713;
 }
 .carousel .wish-icon {
     position: absolute;
