fix::[익준]간단한 교차 테스트 에러 해결 및 메인페이지 배너 폰트 깨짐 현상 해결
* edit main page banner text alignment
* fix product register error
* fix found cross-test error
* modify banner image font
* fix banner font size error

--- a/src/main/webapp/resources/css/carousel.css
+++ b/src/main/webapp/resources/css/carousel.css
@@ -15,12 +15,12 @@ main {
 }
 
 #advertisement-carousel .carousel-inner .carousel-item .carousel-caption .btn-primary {
-    color: #7ac400;
-    font-size: 11px;
+    color: #fff;
+    font-size: 1vw;
     text-transform: uppercase;
     font-weight: bold;
     background: none;
-    border: 1px solid #7ac400;
+    border: 1px solid #fff;
     padding: 12px 28px;
     margin-top: 5px;
     line-height: 16px;
@@ -28,13 +28,19 @@ main {
 }
 
 #advertisement-carousel .carousel-inner .carousel-item .carousel-caption .btn:hover, #advertisement-carousel .carousel-inner .carousel-item .carousel-caption .btn:focus {
-    color: #fff;
-    background: #7ac400;
+    color: #073713;
+    background: #fff;
     box-shadow: none;
 }
 
-.advertiseComment {
+.carousel-caption > .advertiseComment {
     color: #ffd400;
+    margin: 0;
+    font-size: 2vw;
+}
+
+.advertiseCommentLeft h1, .advertiseCommentRight h1 {
+    margin: 0;
 }
 
 .advertiseCommentLeft {
@@ -45,6 +51,32 @@ main {
 .advertiseCommentRight {
     text-align: right;
     right: 10px;
+}
+
+.carousel-item {
+    position: relative;
+    height: fit-content;
+}
+
+.carousel-item .carousel-caption a {
+    z-index: 9999;
+}
+
+.carousel-caption {
+    position: absolute;
+    top: 40%;
+    padding: 0;
+    height: max-content;
+    margin-left: 4%;
+    margin-right: 4%;
+}
+
+.carousel-caption h1 {
+    font-size: 4vw;
+}
+
+.carousel-caption a {
+    font-size: 2vw;
 }
 
 /*제품 캐러셀 css*/
@@ -88,7 +120,7 @@ h2 {
     border-radius: 6px;
     text-align: center;
     position: relative;
-    box-shadow: 2px 4px 6px #d7e9de;
+    box-shadow: 2px 4px 6px #073713;
     max-height: 322.57px;
 }
 .carousel .item .img-box {
@@ -114,20 +146,20 @@ h2 {
     margin-bottom: 5px;
 }
 .carousel .thumb-content .btn {
-    color: #7ac400;
+    color: #073713;
     font-size: 11px;
     text-transform: uppercase;
     font-weight: bold;
     background: none;
-    border: 1px solid #7ac400;
+    border: 1px solid #073713;
     padding: 6px 14px;
-    margin-top: 5px;
+    margin-top: 15px;
     line-height: 16px;
     border-radius: 20px;
 }
 .carousel .thumb-content .btn:hover, .carousel .thumb-content .btn:focus {
     color: #fff;
-    background: #7ac400;
+    background: #073713;
     box-shadow: none;
 }
 .carousel .thumb-content .btn i {
@@ -138,13 +170,13 @@ h2 {
 .carousel .carousel-control {
     height: 44px;
     width: 40px;
-    background: #7ac400;
+    background: #073713;
     margin: auto 0;
     border-radius: 4px;
     opacity: 0.8;
 }
 .carousel .carousel-control:hover {
-    background: #78bf00;
+    background: #073713;
     opacity: 1;
 }
 .carousel .carousel-control i {
@@ -193,7 +225,7 @@ h2 {
     background: rgba(0, 0, 0, 0.2);
 }
 .carousel-indicators li.active {
-    background: rgba(0, 0, 0, 0.6);
+    background: #073713;
 }
 .carousel .wish-icon {
     position: absolute;
