240523 재고 등록, 수정 js 유효성검사 추가

--- a/src/main/webapp/resources/css/adminMenu.css
+++ b/src/main/webapp/resources/css/adminMenu.css
@@ -15,3 +15,11 @@
 .header-button {
     flex: none; /* 버튼 크기 고정 */
 }
+
+.w3-main, #main {
+    transition: margin-left .0s;
+}
+
+.w3-animate-left {
+    animation: none;
+}
