--- a/src/main/webapp/resources/css/mainVideo.css
+++ b/src/main/webapp/resources/css/mainVideo.css
@@ -77,7 +77,7 @@
 }
 .dot {
     position: relative;
-    top: 30px;
+    top: 20px;
     left: 0;
     cursor: pointer;
     height: 20px;
@@ -129,26 +129,9 @@
     margin-top: 7px;
     font-size: 14px;
     color: dimgray;
-}
-
-li {
-    list-style: none;
-}
-
-body {
-    font-family: "Open Sans", sans-serif;
-}
-
-h2 {
-    color: #000;
-    font-size: 26px;
-    font-weight: 300;
     text-align: center;
-    text-transform: uppercase;
-    position: relative;
-    margin: 30px 0 60px;
 }
 
-.productName {
-    height: 40px;
+.videoDot{
+    top: 30px;
 }
