feat::[다니] CSS 및 Cart Jquery 수정 (#80)
* Cart JS cart_cnt 수량 변경 동작버튼 수정

--- a/src/main/webapp/resources/css/order.css
+++ b/src/main/webapp/resources/css/order.css
@@ -1,4 +1,4 @@
-.order__items * {
+* {
     font-family: "IBM Plex Sans KR", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -16,7 +16,8 @@
     color: #777;
 }
 
-.order__header a{
+.order__header a,
+.tb__order a{
     text-decoration: none;
     color: black;
 }
