--- a/src/main/webapp/resources/css/payStyle.css
+++ b/src/main/webapp/resources/css/payStyle.css
@@ -1,12 +1,12 @@
-.p {
-  padding: 0;
-  margin: 0;
-  font-family: Toss Product Sans, -apple-system, BlinkMacSystemFont, Bazier Square, Noto Sans KR, Segoe UI, Apple SD Gothic Neo, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji,
-    Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-  color: #4e5968;
-  word-break: keep-all;
-  word-wrap: break-word;
-}
+/*.p {*/
+/*  padding: 0;*/
+/*  margin: 0;*/
+/*  font-family: Toss Product Sans, -apple-system, BlinkMacSystemFont, Bazier Square, Noto Sans KR, Segoe UI, Apple SD Gothic Neo, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji,*/
+/*    Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;*/
+/*  color: #4e5968;*/
+/*  word-break: keep-all;*/
+/*  word-wrap: break-word;*/
+/*}*/
 
 .wrapper {
   width: 85%;
@@ -128,7 +128,7 @@ html {
   box-sizing: border-box;
 }
 
-.button {
+.wrapper__parent .button {
   /*color: #f9fafb;*/
   /*background-color: #3182f6;*/
   /*margin: 30px 15px 0px 15px;*/
@@ -163,15 +163,15 @@ html {
   background-color: #1b64da;
 }
 
-button:disabled,
-input:disabled {
+.wrapper__parent button:disabled,
+.wrapper__parent input:disabled {
   opacity: 80%;
   cursor: not-allowed;
 }
 
-button,
-input,
-textarea {
+.wrapper__parent button,
+.wrapper__parent input,
+.wrapper__parent textarea {
   font-family: Toss Product Sans, -apple-system, BlinkMacSystemFont, Bazier Square, Noto Sans KR, Segoe UI, Apple SD Gothic Neo, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji,
     Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
 }
