header & footer css update

--- a/src/main/resources/css/header-footer.css
+++ b/src/main/resources/css/header-footer.css
@@ -68,6 +68,9 @@ ul {
 
 .bottom_header{
     margin-left: 7%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .bottom_header li {
