--- a/src/main/webapp/resources/css/nav.css
+++ b/src/main/webapp/resources/css/nav.css
@@ -6,17 +6,16 @@ body {
 /*     flex-direction: column; */
 
 .navibar {
-    /*overflow: hidden;*/
     background-color: white;
-    padding-left: 7%;
+    margin-left: 2%;
 }
 
 .navibar a {
-    float: left;
+    float:left;
     font-size: 16px;
     color: white;
-    padding: 10px 14px;
-    margin-right: 70px;
+    padding: 7px 0;
+    margin-right: 10px;
     text-decoration: none;
 }
 
@@ -26,21 +25,18 @@ body {
 }
 
 .subnav .sub__navBtn {
-    font-size: 15px;
+    font-size: 17px;
     border: none;
     outline: none;
     color: black;
     font-weight: bold;
-    padding: 10px 15px;
+    padding: 10px 20px;
     background-color: inherit;
     margin: 0;
     text-align: center;
     letter-spacing: 0.5px;
 }
 
-.subnav:hover .sub__navBtn {
-    border-bottom: 1px solid red;
-}
 
 .sub__nav__content {
     display: none;
@@ -51,34 +47,36 @@ body {
     z-index: 1;
     white-space: nowrap;
     background-color: white;
-    padding-bottom: 55px;
-    border-bottom: 2px solid rgba(223,4,29,0.5);
+    padding-bottom: 10px;
+    border-bottom: 3px solid rgba(223,4,29,0.5);
 
 }
 .sub__nav__content__group {
     display: flex;
+    justify-content: center;
 }
 .mid {
     display: flex;
     flex-direction: column;
-    margin-left: 7%;
+    align-items: center;
+    margin: 1% 3%;
 }
 
 .mid a:first-child {
     font-weight: 600;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .sub__nav__content a {
     float: left;
     color: black;
-    text-decoration: none;
+    /*text-decoration: none;*/
     background-color: white;
-    font-size: 13px;
+    font-size: 14px;
 }
 
 .sub__nav__content a:hover {
-    color: black;
+    color: rgba(223,4,29,0.5);
     border-bottom: 1px solid red;
 }
 
