--- a/src/main/webapp/resources/css/order.css
+++ b/src/main/webapp/resources/css/order.css
@@ -44,12 +44,13 @@
 }
 
 .tb__order thead th {
-    padding: 7px 0 6px;
-    background-color: #fff;
-    border-top: 2px solid #ddd;
-    font-weight: normal;
-    color: #4d4d59;
-    border-bottom: 1px solid #ddd;
+    padding: 11px 0;
+    background-color: #183c21;
+    color: white;
+    border-top: 2px solid #000;
+    border-bottom: 1px solid #e5e5e5;
+    font-size: 15px;
+    font-weight: bold;
 }
 
 .head_main {
@@ -96,7 +97,7 @@
 
 
 .order__title__detail {
-    font-size: 12px;
+    font-size: 15px;
 }
 
 .order__title__detail a:first-child {
