refactor::[익준]메인 페이지 제품
* modify banner image font
* fix banner font size error
* modify product name text decoration when mouse hover
* trim input spaces
* fix error when product number is 0
* fix main page error when product number is 0
* modify main page image
* modify main banner image padding

--- a/src/main/webapp/resources/css/mainVideo.css
+++ b/src/main/webapp/resources/css/mainVideo.css
@@ -7,6 +7,12 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding-bottom: 30px;
+    border-bottom: 3px dotted #eee;
+}
+
+#caption {
+    color: white;
 }
 
 .interview {
@@ -94,7 +100,6 @@
 
 #king {
     display: flex;
-    width: 1600px;
     margin: 0;
 }
 
