--- a/src/main/webapp/resources/css/mainCategory.css
+++ b/src/main/webapp/resources/css/mainCategory.css
@@ -1,3 +1,8 @@
+.main-category {
+    padding-bottom: 30px;
+    border-bottom: 3px dotted #eee;
+}
+
 .img-fluid {
     width: 100%;
     height: auto;
