--- a/src/main/webapp/resources/css/mainCategory.css
+++ b/src/main/webapp/resources/css/mainCategory.css
@@ -1,3 +1,15 @@
+@media (min-width: 768px) {
+    .category {
+        flex: 0 0 auto;
+        width: 25%;
+    }
+}
+
+.main-category-container {
+    padding-right: 0px;
+    padding-left: 0px;
+}
+
 .main-category {
     padding-bottom: 30px;
     border-bottom: 3px dotted #eee;
