--- a/src/main/webapp/resources/css/adminDefaultTable.css
+++ b/src/main/webapp/resources/css/adminDefaultTable.css
@@ -3,16 +3,19 @@ table {
     border-collapse: collapse;
     width: 100%;
     border: 1px solid #ddd;
-    font-size: 12px;
+    font-size: 14px;
 }
 
 th, td {
     padding: 10px;
-    border: 1px solid #ddd;
+
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
 }
 
 th {
+    border: 1px solid #ddd;
     background-color: #f3f3f3;
     text-align: center;
-    font-size: 14px;
+    font-size: 16px;
 }
