--- a/src/main/webapp/resources/css/carousel.css
+++ b/src/main/webapp/resources/css/carousel.css
@@ -283,13 +283,13 @@ body {
 }
 
 price {
-    font-size: 18px;
+    font-size: 1.5vw;
     font-weight: bolder;
     color: grey;
 }
 
 sale-price {
-    font-size: 18px;
+    font-size: 1.5vw;
     font-weight: bolder;
     color: red;
 }
