--- a/src/main/webapp/resources/css/nav.css
+++ b/src/main/webapp/resources/css/nav.css
@@ -30,11 +30,12 @@ body {
     outline: none;
     color: black;
     font-weight: bold;
-    padding: 10px 20px;
+    padding: 10px 14px;
     background-color: inherit;
     margin: 0;
     text-align: center;
     letter-spacing: 0.5px;
+    cursor: pointer;
 }
 
 
