--- a/src/main/webapp/resources/css/order_det.css
+++ b/src/main/webapp/resources/css/order_det.css
@@ -1,12 +1,21 @@
-* {
+.order-container {
     font-family: "IBM Plex Sans KR", sans-serif;
-    font-weight: 400;
     font-style: normal;
 }
 
+.head_order_det {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: rgb(51, 51, 51);
+    font-size: 30px;
+    font-weight: 800;
+    letter-spacing: 1.4px;
+    margin-bottom: 40px;
+}
 
-
-table {
+.order_det_table {
     width: 85%;
     margin: 0 auto;
     text-align: left;
@@ -14,20 +23,37 @@ table {
     line-height: 1.35;
     color: #777;
 }
-img {
-    height: 80px;
-    width: 80px;
+
+.order_det_table a {
+    text-decoration: none;
+    color: black;
 }
 
-th, td {
+.order_det_table thead th {
+    padding: 11px 0;
+    background-color: #333;
+    color: white;
+    border-top: 2px solid #000;
+    border-bottom: 1px solid #e5e5e5;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.order_det_table td{
+    padding: 10px 0;
+    vertical-align: middle;
+    font-size: 16px;
+}
+
+.order_det_table td,
+.order_det_table th {
     text-align: center;
 }
 
-td {
-    padding: 10px 0;
-    vertical-align: middle;
+.product-info img {
+    height: 110px;
+    width: 110px;
 }
-
 hr {
     width: 80%;
     height: 1px;
@@ -35,125 +61,12 @@ hr {
     background-color: #cecece;
 }
 
-.quantity_control input {
-    width: 23px;
-    height: 23px;
-    padding: 5px;
-    border: 1px solid #acacac;
-    border-top-left-radius: 2px;
-    border-bottom-left-radius: 2px;
-    text-align: center;
-}
-
-.first__under {
-    margin-top: 40px;
-    margin-bottom: 40px;
-}
-
-thead th {
-    padding: 7px 0 6px;
-    background-color: #fff;
-    border-top: 2px solid #ddd;
-    font-weight: normal;
-    color: #4d4d59;
-    border-bottom: 1px solid #ddd;
-}
-
-.head_cart {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 130px;
-    text-align: center;
-    color: rgb(51, 51, 51);
-    font-size: 13px;
-    font-weight: 800;
-    letter-spacing: 1.4px;
-}
-
-.title__cart {
-    margin-left: 8%;
-    font-size: 15px;
-    font-weight: 600;
-    margin-bottom: 10px;
-}
-
-.tb__left {
-    text-align: left;
-}
-
-.tb__right {
-    display: grid;
-    /*justify-content: center;*/
-    place-items: end;
-    font-weight: bold;
-    font-size: 14px;
-    margin-right: 1%;
-}
-
-tfoot td, tfoot tr{
-    border-bottom: 1px solid #a3a3a3;
-    padding: 10px;
-}
-
-.quantity_control button{
-    background-color: white;
-    border: 1px solid #b4b4b4;
-}
-
-.nonCart {
-    text-align: center;
-    margin-right: 120px;
-    line-height: 1.35;
-    color: black;
-    padding: 20px;
-    font-weight: bold;
-}
-
-button:hover {
-    cursor: pointer;
-}
-
-.btnStyle > form {
+.product-info {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#orderForm button {
-    display: inline;
-    width: 190px;
-    height: 48px;
-    line-height: 48px;
-    background: none;
-    margin: 10px;
-}
-
-#orderForm button:first-child {
-    border: 1px solid #d8d8d8;
-    color: #343434;
-}
-
-#orderForm button:last-child {
-    border: 1px solid #333;
-    color: #fff;
-    background-color: #333;
-}
-
-#removeAllForm {
-    display: flex;
-    justify-content: end;
-    align-items: center;
-}
-
-.removeAllBtn,
-.deleteBtn {
-    width: 120px;
-    height: 30px;
-    font-weight: normal;
-    border: 1px solid #b4b4b4;
-    line-height: 25px;
-    text-align: center;
-    background-color: white;
-    color: #333;
+.info {
+    margin-left: 5%;
 }
