refactor::[현지]admin global css
* 240525 admin sidebar 페이지 이동시 표시 수정
* 240527 admin sidebar css 수정완료
* 240527 admin css 일부, 재고 기능 수정

--- a/src/main/webapp/resources/css/adminMenu.css
+++ b/src/main/webapp/resources/css/adminMenu.css
@@ -25,5 +25,10 @@
 }
 
 .w3-container {
-    overflow-x:auto;
+    overflow-x: auto;
 }
+
+.w3-sidebar .w3-bar-item.active {
+    background-color: #073713;
+    color: white;
+} /* 활성화된 항목에 대한 스타일 */
