--- a/src/main/webapp/resources/css/searchConditionForm.css
+++ b/src/main/webapp/resources/css/searchConditionForm.css
@@ -19,7 +19,7 @@
     outline: none;
     border: 1px solid #ccc;
     padding: 5px;
-    font-size: 12px;
+    font-size: 13px;
 }
 
 .search-option > option {
@@ -31,7 +31,7 @@
     background-color: white;
     border: 1px solid #ccc;
     height: 100%;
-    font-size: 12px;
+    font-size: 13px;
     padding: 5px;
 }
 
@@ -68,7 +68,7 @@
 
 .sendBtnSmall {
     padding: 5px 10px;
-    font-size: 12px;
+    font-size: 13px;
 }
 
 .cancelBtn {
@@ -86,4 +86,68 @@
 
 .sendBtn:hover {
     background: #0b7dda;
+}
+
+/* The container */
+.radio-container {
+    position: relative;
+    padding: 2px 30px 2px 25px;
+    cursor: pointer;
+    font-size: 13px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+/*    display: block;*/
+/*    margin-bottom: 12px;*/
+}
+
+/* Hide the browser's default radio button */
+.radio-container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+    position: absolute;
+    top: 5px;
+    left: 0px;
+    height: 15px;
+    width: 15px;
+    background-color: #eee;
+    border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.radio-container:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.radio-container input:checked ~ .checkmark {
+    background-color: #2196F3;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.radio-container input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.radio-container .checkmark:after {
+    top: 3.5px;
+    left: 3.5px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: white;
 }
